Ensured that the form looks nice on mobile-sized screens. #1

--- a/css/styles.css
+++ b/css/styles.css
@@ -1,15 +1,77 @@
-body {
+* {
   font-family: sans-serif;
+}
+
+header {
+  background-color: #4a2372;
+  color: white;
+  padding: 0.01rem 0;
+}
+
+body {
+  background-color: #f4f1f5;
+}
+
+.journal-header {
+  font-weight: normal;
+  font-size: 0.8em;
+  margin-left: 1em;
 }
 
 .entry-form {
   display: flex;
   flex-direction: column;
-  justify-content: center;
   margin: 0 auto;
   padding: 1rem;
 }
 
+.new-entry {
+  font-size: 1.2em;
+  margin: 0.1rem 0;
+}
+
 .placeholder-image {
   width: 100%;
+  height: 11rem;
+  object-fit: cover;
+  margin: 0.5rem 0;
+}
+
+.label-input-div {
+  padding: 0.3rem 0;
+}
+
+.label-div {
+  padding: 0.2rem 0;
+}
+
+.label-div > label {
+  font-weight: bold;
+  font-size: 0.7em;
+}
+
+.input-div > input {
+  width: 100%;
+  height: 2em;
+  border: 1px solid rgb(211, 206, 206);
+  border-radius: 4px;
+}
+
+.input-notes > input {
+  height: 6rem;
+}
+
+.submit {
+  text-align: right;
+  margin: 0.2rem 0;
+}
+
+.submit > input {
+  text-transform: uppercase;
+  background-color: #4a2372;
+  color: white;
+  font-size: 0.7em;
+  padding: 0.35rem 0.6rem;
+  border-radius: 4px;
+  border: none;
 }
